--- a/src/app.json
+++ b/src/app.json
@@ -1,4 +1,12 @@
 {
-    "title": "Power Your Home with Clean Energy Storage",
-    "subtitle": "Store solar energy, reduce electricity bills, and keep your home powered during outages with our advanced powerwall systems."
+    "title": "Soluções Tecnológicas e Inovadoras",
+    "subtitle": "Store solar energy, reduce electricity bills, and keep your home powered during outages with our advanced powerwall systems.",
+    "products": [
+        {
+            "image": "",
+            "title": "Tesla Energy Engloba",
+            "short_description": "",
+            "description": ""
+        }
+    ]
 }
