--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
   "name": "x-watt",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://ghanobregaa.github.io/x-watt/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
     "@react-spring/web": "^10.0.1",
+    "gh-pages": "^6.3.0",
     "motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
