--- a/src/app.json
+++ b/src/app.json
@@ -1,6 +1,8 @@
 {
     "title": "Soluções Tecnológicas e Inovadoras",
     "subtitle": "Store solar energy, reduce electricity bills, and keep your home powered during outages with our advanced powerwall systems.",
+    "aboutSubTitle": "Somos o parceiro certo para o ajudar na sua transição energética.",
+    "aboutDesc": "Oferecemos soluções especializadas em energia solar, armazenamento de energia e carregamento de veículos elétricos para casas e empresas.<br/><br/>Atuamos também como consultores independentes no setor das energias renováveis, auxiliando os nossos clientes em todos os processos desde a fusão, aquisição e financiamento, bem como no desenvolvimento de projetos, construção, instalação, conectividade e lançamento das soluções. Quando o projeto se tornar realidade, continuamos a apoiar os nossos cliente com uma assistência técnica dedicada e permanente.<br/><br/>A nossa equipa de profissionais garante o acompanhamento durante todo o ciclo de vida das instalações de energia renovável.",
     "products": [
         {
             "image": "",
